# my_album

./: .gitignore  .swp  JsonManager.py  LICENSE  README.md  SimpleLogger.py  config.yaml  derectory_config.txt  git_history.sh  hardware.lst  my_album.tree  my_album_history.txt  my_photo_album_3.txt  my_photo_album_3.yaml  poetry.his  pyproject.toml  tree.txt
PhotoAlbum/: DISTRIBUTED_WORKFLOW.md  clean_poetry_init.sh  poetry_init.sh  pyproject.toml
PhotoAlbum/src/: create_face_jsons_polygon - 복사본.py  object_detector - 복사본.py  object_detector.py
ResNet34/outputs/: face_index.pkl
ResNet34/sorc/: find_similar_faces.py  myresnet.py
UpstageProject/ResNet34/: .model.yaml  .my_config.yaml
UpstageProject/ResNet34/sorc/: train_gemini_resnet.py  train_myresnet.py
backup/: MoveOriginalPhotos_20250811.py  OrganizePhotosByHashExif_20250801.py  OrganizePhotosByHashExif_20250803_순서처리.py  UseCfgLogger.py
config/: .my_config.yaml  image_extensions.txt  photo_album.yaml
face_finder_project/: .1.swp  .my_config.yaml  1  main.py  pyproject.toml
face_finder_project/sorc/: find_similar_faces.py  find_similar_faces_cnn.py  server_main.py  utf_val.lst
face_sorter/: init_poetrt.py  pyproject.toml  setup_project.py
face_sorter/face_sorter/: .gitignore  README.md  pyproject.toml
face_sorter/face_sorter/src/face_sorter/: clustering.py  face_extractor.py  main.py
index/: face_metadata.jsonl
industry-partnership-project-brainventures/: .gitignore
industry-partnership-project-brainventures/DU/backup/: 02_DU4_baseline_1280_test.csv  03_DU3_baseline_new_train_test.csv
industry-partnership-project-brainventures/JH/: choi.txt
industry-partnership-project-brainventures/output/ckpt_pth/: DU2_epoch=18-step=3895.ckpt  (+2 more)
my_album/: 1  my_album_indexer.py  poetry_init.sh  poetry_setup_python310.sh  pyproject.toml
my_album/config/: json_structure_template.yaml  my_album.yaml
my_album/src/: face_dectection_main.py  face_detecter_opencv_dnn.py  face_detection.py  face_indexer_from_face.py  indexer_from_face.py  indexer_from_face_with_embedding.py
my_album/utility/: config_manager.py
my_photo_album/: README.md  poetry.sh  pyproject.toml  requirements.txt
my_photo_album/config/: .my_photo_album_config.yaml
my_photo_album/src/: face_indexer.py  face_search_web.py.py
my_photo_album/templates/: search.html
my_photo_album_2/: pyproject.toml
my_photo_album_2/config/: .my_config.yaml  .my_config_1.yaml  my_photo_album_2.txt
my_photo_album_2/src/: config_loader.py  create_face_jsons.py  detect_faces_with_polygon.py  face_cropper_polygon.py  face_detector.py  face_indexer_landmark.py  face_search_web.py  face_search_web_0.py  face_search_web_1.py  save_face_json_with_polygon.py
my_photo_album_2/templates/: search.html
my_photo_album_3/: pyproject.toml  requirements.txt
my_photo_album_3/config/: my_photo_album_3.yaml
my_photo_album_3/src/: config_class.py  face_indexer_landmark.py  save_face_json_with_polygon.py
my_utils/: README.md  imagenames.txt  pyproject.toml  restore.sh  test_data_modified.json  test_data_new.json
my_utils/src/my_utils/: SimpleLogger.py
my_utils/src/my_utils/config_utils/: JsonManager.py  PhotoAlbumConfig.py  SimpleLogger.py  SimpleLogger_gpt.py  SimpleLogger_v11.py  arg_utils.py  configger.py  configger_1_0.py  display_utils.py  file_utils.py
my_utils/src/my_utils/object_utils/: data_loading_helpers.py  dlib_utils.py  matplotlib_utils.py  photo_utils.py  yolo_utils.py
my_utils/src/my_utils/tools/: # display_utils.py  # file_utils.py  CreateTestData.py  FindDuplicatePhotos.py  GoverTheItems.py  MakeTestData.sh  MoveOriginalPhotos.py  MoveOriginalPhotos_20250801.py  MoveOriginalPhotos_v10.py  MoveSearchedDupPhoto.py  OrganizePhotosByHash.py  OrganizePhotosByHashExif.py  OrganizePhotosByHashExif_20250801.py  OrganizePhotosByHashExif_20250802.py  OrganizePhotosByHashExif_20250804_병렬1단계.py  OrganizePhotosByHashExif_20250804_순처처리.py  OrganizePhotosByHashExif_v10.py  RemoveEmptyDirectories.py  RemoveEmptyDirectories_20250801.py  image_files_list.sh  image_test_data.lst  remove_empty_directories.py
my_yolo_tiny/: 1  1.txt  poetry_init.sh  pyproject.toml  pyproject.toml_v10
my_yolo_tiny/${detected_objects_dir}/: detected_jsons.lst
my_yolo_tiny/${undetect_objects_dir}/: undetect_jsons.lst
my_yolo_tiny/src/: detect_faces_in_crop_yolo.py  face_detector_with_json.py  face_detector_with_json_10.py  object_detector.py  object_detector_v20.py  object_detector_v30.py  sub_object_detector.py  web_app.py
setup_tools/: poetry_project_init.sh  setup_full_my_photo_album.py  setup_full_my_photo_album_3.py  setup_my_photo_album_2.py
shared_utils/: pyproject.toml
shared_utils/sorc/utility/: ProjectConfig.txt  configger0.py  face_detection.py
templates/: search.html
tomls/: my_photo_album.toml
tools/: ConvertFIleNameAndPath.py  Git_init.sh  LoginToRremoteHhostSsh.sh  MakeAbsPath.sh  MkAbsPath.sh  MkWildCard.sh  MoveFile.sh  MvDupFile.sh  MvFileForExist.sh  PutAwayAllFile.sh  PutAwayDupFile20231222.sh  PutAwayDupFileByLs.sh  ReadDupFile.sh  SetKorean.sh  ShellTemplte.sh  ShowDir.sh  WhileTail.sh  dataloadbalance.py  fdisk.sh  font_test.py  gen_auto_login.sh  json_merge_bbox.py  json_merge_bbox_text.py  move_mismatch_file_ext.py  organize_photos_editting.py  organize_photos_v1.0.py  overap_image_annotation.py  poetry.sh  rSyncBackupToHome.sh  read_file_list.py  remextention.py  restore_filenames_report.py  review_photos.py  set_data_use_jsons_file.py  set_openvon_vars.sh  setup-openvpn-client.sh  setup-openvpn-server.sh  setup_easyra.sh  sftp_get_by_file_list.py  sftp_get_file.py  (+10 more)
web_service/: my_album.tree
web_service/my_album_app/: .swp  192.168.219.10-key.pem  192.168.219.10.pem  README.md  pyproject.toml  run.sh  run_v1_0.sh
web_service/my_album_app/index/: face_index.faiss
web_service/my_album_app/src/: app_bak.py
web_service/my_album_app/src/my_album_labeling_app/: app.py
web_service/my_album_app/src/static/css/: style.css
web_service/my_album_app/src/templates/: index.html  label_image.html  label_image.html)
(+26 files in other folders)
