[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "PhotoAlbum"
version = "0.1.0"
description = ""
authors = [
    {name = "choi,jong-hwan", email = "salgabda@naver.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0", # PEP 508 표준을 따릅니다.
    "ultralytics>=8.3.128,<9.0.0", # '^'는 Poetry 전용이므로 PEP 508 호환 버전으로 수정
    "wcwidth>=0.2.13,<0.3.0",
    "face-recognition>=1.3.0,<2.0.0",
    "opencv-python>=4.9.0,<5.0.0",
]

[tool.poetry]
packages = [{include = "src"}] # 소스 코드가 src 디렉토리에 있다고 Poetry에게 알려줍니다.

[tool.poetry.dependencies]
# Poetry의 고유 기능(예: 개발용 로컬 경로)을 사용하는 의존성은 여기에 유지합니다.
my-utils = { path = "../my_utils", develop = true } # 로컬 패키지 의존성