[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "photoalbum"
version = "0.1.0"
description = ""
authors = ["choi,jong-hwan <salgabda@naver.com>"]
readme = "README.md"
packages = [{include = "src"}] # 소스 코드가 src 디렉토리에 있다고 Poetry에게 알려줍니다.

[tool.poetry.dependencies]
python = ">=3.10"
PyYAML = ">=6.0"
ultralytics = ">=8.3.128,<9.0.0"
wcwidth = ">=0.2.13,<0.3.0"
face-recognition = ">=1.3.0,<2.0.0" # 얼굴 탐지 및 임베딩 추출을 위해 추가
opencv-python = ">=4.9.0,<5.0.0"
tqdm = "*" # tqdm은 ultralytics의 의존성이지만 명시적으로 추가하는 것이 좋습니다.
# Poetry의 고유 기능(예: 개발용 로컬 경로)을 사용하는 의존성은 여기에 유지합니다.
my-utils = { path = "../my_utils", develop = true } # 로컬 패키지 의존성

[tool.poetry.group.train]
optional = true

[tool.poetry.group.train.dependencies]
# scikit-learn: 데이터 분할, 성능 평가(정확도, F1 스코어 등)에 필수적입니다.
scikit-learn = "*"
# tensorboard: 훈련 과정(손실, 정확도 등)을 시각화하는 데 사용됩니다.
tensorboard = "*"
# albumentations: 빠르고 유연한 이미지 증강 라이브러리입니다.
albumentations = "*"