[project]
name = "face-finder-project"
version = "0.1.0"
description = "원격 서버와 웹캠을 사용하여 유사한 얼굴을 찾는 프로젝트입니다."
authors = [
    { name = "salgabda", email = "salgabda@naver.com" }
]
readme = "README.md"
requires-python = ">=3.10"
package-mode = false  # Poetry 2.x 이상에서는 패키징 비활성화 시 필요

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.100.0"
uvicorn = { extras = ["standard"], version = ">=0.24.0" }
python-multipart = ">=0.0.6"
opencv-python-headless = ">=4.8.0"
requests = ">=2.30.0"
Pillow = ">=9.0.0"
face-recognition = ">=1.3.0,<2.0.0"
#face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models.git" }

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0"
pytest = ">=7.4.0"
mypy = ">=1.8.0"
pre-commit = ">=3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
