[tool.poetry]
name = "my-album"
version = "0.1.0"
description = "A small project for YOLO object detection"
authors = ["choi-jonghwan <salgabda@naver.com>"]
readme = "README.md"

# 패키지 모드 비활성화 (추가)
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
# PyYAML 의존성은 아래 리스트에서 pyyaml로 이미 지정되어 있으므로 여기서는 중복 제거 또는 아래에서 버전 명시
# PyYAML = ">=6.0" # 이 줄은 삭제하거나 아래 pyyaml의 버전을 확인합니다.

ultralytics = "^8.3.128" # 이 줄은 그대로 둡니다.

# 기존 dependencies = [...] 리스트를 제거하고, 그 항목들을 아래에 개별적으로 나열합니다.
dlib = ">=19.24.8,<20.0.0"
face-recognition = ">=1.3.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=1.26,<2.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
# pyyaml은 이미 PyYAML = ">=6.0"으로 위에 있거나, 아래 버전 제약을 사용합니다.
# 둘 중 하나만 남겨둡니다. 아래 제약이 더 구체적이므로 아래를 남기는 것이 좋습니다.
pyyaml = ">=6.0.2,<7.0.0"
mediapipe = ">=0.10.21,<0.11.0"
faiss-cpu = ">=1.11.0,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"

# 로컬 패키지 의존성 (올바르게 정의되어 있습니다)
my-utils = { path = "../my_utils", develop = true }

[build-system]
requires = ["poetry-core"] # 특정 버전 범위 대신 Poetry가 호환되는 버전을 찾도록 합니다.
build-backend = "poetry.core.masonry.api"
