[tool.poetry]
name = "my_photo_album_3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "^0.10.9"
numpy = "^1.26"
opencv-python = "^4.9"
Pillow = "^10.2"
matplotlib = "^3.8"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
