[project]
name = "shared-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "choi-jonghwan",email = "salgabda@naver.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [
    # 'sorc' 디렉토리 아래에 있는 'utility' 디렉토리를
    # 'utility'라는 이름의 패키지로 포함시킨다는 의미
    { include = "utility", from = "sorc"  }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
